# voila-sepal-ui

./: .cz.toml  .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  README.rst  app.ipynb  map_app.ipynb  pyproject.toml  setup.py  test.ipynb
.github/workflows/: release.yml
share/jupyter/nbconvert/templates/sepal-ui-base/: ansi.js  app.html  index.html.j2  sepal-ui-scripts.html  util.js
share/jupyter/nbconvert/templates/sepal-ui-base/components/: LoadingCard.vue
share/jupyter/nbconvert/templates/sepal-ui-base/static/: sepal_ui_styles.css
share/jupyter/voila/templates/sepal-ui-base/: index.html.j2
